Fix issue with shown tooltips on mobile devices

--- a/assets/styles/global/tooltip.scss
+++ b/assets/styles/global/tooltip.scss
@@ -4,7 +4,14 @@
 // -------------------------|
 .tooltip {
   z-index: 10000;
-  display: block !important;
+
+  .desktop & {
+    display: block !important;
+  }
+
+  .mobile & {
+    display: none !important;
+  }
 
   .tooltip-inner {
     padding: 8px 21px;
